# you-shadow

./: .gitignore  .replit  README.md  app.py  appOld.py  audio_utils.py  compare.py  config.py  credentials.json  diff_viewer.py  error_handler.py  export_csv.py  log.csv  log.json  logger.py  models.py  preset_log.json  pyproject.toml  readme.md  replit.nix  requirements.txt  tako.py  test.py  transcribe.py  transcribe_utils.py  tree.txt  upload_to_sheet.py  utils.py  wer_utils.py  youtube_utils.py
attached_assets/: Pasted--Flask-Flask-app-py--1746683832350.txt  Pasted--Replit-Specific-Instructions-for-Modifying-app-py-Please--1746684120637.txt  Pasted--app-py-app-py-app-route--1746684055738.txt  Pasted-3-Modify-Evaluation-Logic-Backend-Flask-endpoint-and-potentially-wer-utils-py-caller--1745816360860.txt  Pasted-I-need-help-implementing-a-new-feature-This-feature-will-allow-users-to-upload-their-own-audio-file-1745810446256.txt  Pasted-Subject-Implement-Workaround-for-Initial-Recording-Lag-in-Custom-Shadowing-Feature-We-need-to-im-1745816322335.txt  Pasted-Subject-Modify-Warm-up-Transcript-Removal-Logic-in-Custom-Shadowing-Evaluation-Hi-AI-Assistant--1745819616257.txt  Pasted-Subject-Request-to-Implement-New-Feature-Custom-Audio-Shadowing-Practice-Hi-AI-Assistant-I--1745810376234.txt
core/: audio_utils.py  auth.py  diff_viewer.py  responses.py  text_utils.py  wer_utils.py
routes/: api_routes.py  stripe_routes.py
static/: script.js  short.js  style.css  youtube.js
templates/: compare.html  custom_shadowing.html  dashboard.html  detail.html  index.html  pricing.html  (+8 more)
(+89 files in other folders)
