[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "gspread>=6.2.0",
    "numpy>=2.2.4",
    "oauth2client>=4.1.3",
    "openai>=1.68.2",
    "werkzeug>=3.1.3",
    "youtube-transcript-api>=1.0.3",
]
[server]
headless = true

[browser]
gatherUsageStats = false